--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 
   <title>Simon Kinsler</title>
 
-  <!-- Boostrap Stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-  <!-- Our own CSS stylesheet -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">
   <link rel="stylesheet" href="assets/css/styles.css" media="screen">
 
 </head>
@@ -29,8 +27,17 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item icon">
+            <a target="_blank" href="http://github.com/skinsler" class="fi-social-github"></a>
+          </li>  
+          <li class="nav-item icon">
+            <a target="_blank" href="https://www.linkedin.com/in/simonkinsler/" class="fi-social-linkedin"></a>
+          </li>
+          <li class="nav-item icon">
+            <a href="mailto:simonkinsler@gmail.com" class="fi-mail"></a>
+          </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="resume.html">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -53,16 +60,16 @@
         <article class="block">
           <h1 class="block-header">About Me</h1>
           <hr />
-          <img src="assets/imgs/catt200.jpg" alt="" id="about-image" />
+          <img src="assets/imgs/simonkinslerprofile.jpg" alt="" id="about-image" />
           <p>Hello! My name is Simon Kinsler and I'm currently transitioning to a
             career in software development. I have two years of experience as a
             Jira/Confluence Administrator at an eCommerce company, where I also gained some
             experience with Salesforce Commerce Cloud (formerly Demandware). I am currently
             solidifying my skills at the University of Minnesota Full Stack Web Development
-            Boot Camp, adding to my on-the-job training and A.S. of Computer Science which
+            Boot Camp, adding to my work experience and A.S. of Computer Science which
             I will complete in the Fall of 2019</p>
           <br />
-          <p>I am interested in junior Web and Software development, DevOPS, and automated quality
+          <p>I am interested in junior web and software development, DevOps, and automated quality
             assurance roles. I can also put my knowledge as an experienced Jira/Confluence 
             Administrator to use right away at your organization. Let's get in contact!
           </p>
@@ -76,7 +83,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright
+      &copy; Copyright 2019 Simon Kinsler
     </p>
   </footer>
   <!-- End of footer -->
