--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Bootstrap Basic Portfolio</title>
+  <title>Simon Kinsler</title>
 
-  <!-- Boostrap Stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <!-- Our own CSS stylesheet -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">
   <link rel="stylesheet" href="assets/css/styles.css" media="screen">
 
 </head>
@@ -20,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand" href="index.html" id="logo">Your Name</a>
+          <a class="navbar-brand" href="index.html" id="logo">Simon Kinsler</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,8 +27,17 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+              <li class="nav-item icon">
+                <a target="_blank" href="http://github.com/skinsler" class="fi-social-github"></a>
+              </li>  
+              <li class="nav-item icon">
+                <a target="_blank" href="https://www.linkedin.com/in/simonkinsler/" class="fi-social-linkedin"></a>
+              </li>
+              <li class="nav-item icon">
+                <a href="mailto:simonkinsler@gmail.com" class="fi-mail"></a>
+              </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="resume.html">Resume</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -83,7 +91,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright 2018 Your Name
+      &copy; Copyright 2019 Simon Kinsler
     </p>
   </footer>
   <!-- End of footer -->
