--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Bootstrap Basic Portfolio</title>
+  <title>Simon Kinsler</title>
 
-  <!-- Boostrap Stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-  <!-- Our own CSS stylesheet -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css">
   <link rel="stylesheet" href="assets/css/styles.css" media="screen">
 
 </head>
@@ -22,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand" href="index.html" id="logo">Your Name</a>
+          <a class="navbar-brand" href="index.html" id="logo">Simon Kinsler</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,8 +28,17 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+              <li class="nav-item icon">
+                <a target="_blank" href="http://github.com/skinsler" class="fi-social-github"></a>
+              </li>  
+              <li class="nav-item icon">
+                <a target="_blank" href="https://www.linkedin.com/in/simonkinsler/" class="fi-social-linkedin"></a>
+              </li>
+              <li class="nav-item icon">
+                <a href="mailto:simonkinsler@gmail.com" class="fi-mail"></a>
+              </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact</a>
+                <a class="nav-link active" href="resume.html">Resume</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -49,33 +56,10 @@
 
   <!-- Start of container -->
   <main class="container">
-    <section class="row">
-      <div class="col-md-8">
-        <form class="block form-horizontal">
-          <h1 class="block-header">Contact</h1>
-          <hr />
-          <div class="form-group">
-            <label for="name" class="col-sm-2 control-label">Name</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="name" placeholder="Name">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="email" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-              <input type="password" class="form-control" id="email" placeholder="Email">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="msg">Message</label>
-            <div class="col-sm-10">
-              <textarea id="msg" class="form-control" rows="3" placeholder="Message"></textarea>
-            </div>
-          </div>
-          <button class="submit-btn">Submit</button>
-        </form>
+      <div class="embed-responsive" style="padding-bottom:150%">
+          <object data="/assets/pdfs/simonkinslerresume.pdf" type="application/pdf"></object>
+          <embed src="/assets/pdfs/simonkinslerresume.pdf" type="application/pdf">
       </div>
-    </section>
   </main>
   <!-- End of container -->
 
@@ -83,7 +67,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright
+      &copy; Copyright 2019 Simon Kinsler
     </p>
   </footer>
   <!-- End of footer -->
