back on network

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,6 @@
               <li class="nav-item icon">
                 <a href="mailto:simonkinsler@gmail.com" class="fi-mail"></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="resume.html">Resume</a>
-              </li>
               <li class="nav-item active">
                 <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
@@ -55,35 +52,104 @@
 
   <!-- Start of container -->
   <div class="container">
-    <main class="row">
-      <div class="col-md-8">
         <article class="block">
-          <h1 class="block-header">Portfolio</h1>
+          <h1 class="block-header">Projects</h1>
           <hr />
           <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+            <div class="col-sm-12 col-md-6 col-lg-6">
+              <a href target="_blank" href="https://github.com/AshleyFeijoo/JamFinder">
+                <figure class="figure">
+                  <img src="./assets/imgs/jam-finder.jpg" class="figure-img img-fluid rounded" alt="Jam Finder">
+                  <figcaption class="figure-caption text-center font-weight-bold">Jam Finder</figcaption>
+                </figure>
+              </a>
             </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+            <div class="col-sm-12 col-md-6 col-lg-6">
+              <a href target="_blank" href="https://github.com/DeepaGokhale/team_x-mxn">
+                <figure class="figure">
+                  <img src="./assets/imgs/job-trax.jpg" class="figure-img img-fluid rounded" alt="Job Trax">
+                  <figcaption class="figure-caption text-center font-weight-bold">Job Trax</figcaption>
+                </figure>
+              </a>
+            </div>
+          </article>
+          <article class="block">
+            <h1 class="block-header">Bootcamp Homeworks</h1>
+            <hr />
+            <div class="row">
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <a target="_blank" href="https://github.com/skinsler/Word-Guess-Game">
+                  <figure class="figure">
+                      <img src="./assets/imgs/word-guess-game.jpg" class="figure-img img-fluid rounded" alt="Word Guess Game">
+                      <figcaption class="figure-caption text-center font-weight-bold">Word Guess Game</figcaption>
+                  </figure>
+                </a>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                  <a target="_blank" href="https://github.com/skinsler/unit-4-game">
+                    <figure class="figure">
+                        <img src="./assets/imgs/crystal-clicker.jpg" class="figure-img img-fluid rounded" alt="Crystal Clicker">
+                        <figcaption class="figure-caption text-center font-weight-bold">Crystal Clicker Game</figcaption>
+                    </figure>
+                  </a>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-4">
+                <a target="_blank" href="https://github.com/skinsler/TriviaGame">
+                  <figure class="figure">
+                      <img src="./assets/imgs/trivia-game.jpg" class="figure-img img-fluid rounded" alt="Trivia Game">
+                      <figcaption class="figure-caption text-center font-weight-bold">Trivia Game</figcaption>
+                  </figure>
+                </a>
+              </div>
+            </div>
+
+          <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <a target="_blank" href="https://github.com/skinsler/GifTastic">
+                  <figure class="figure">
+                      <img src="./assets/imgs/gif-tastic.jpg" class="figure-img img-fluid rounded" alt="Gif Tastic">
+                      <figcaption class="figure-caption text-center font-weight-bold">Gif Tastic</figcaption>
+                  </figure>
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <a target="_blank" href="https://github.com/skinsler/liri-node-app">
+                <figure class="figure">
+                    <img src="./assets/imgs/spotify-this-song.gif" class="figure-img img-fluid rounded" alt="LIRI Node App">
+                    <figcaption class="figure-caption text-center font-weight-bold">LIRI Node App</figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <a target="_blank" href="https://github.com/skinsler/bamazon">
+                <figure class="figure">
+                    <img src="./assets/imgs/bamazon.gif" class="figure-img img-fluid rounded" alt="Bamazon">
+                    <figcaption class="figure-caption text-center font-weight-bold">Bamazon</figcaption>
+                </figure>
+              </a>
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <a target="_blank" href="https://github.com/skinsler/friend-finder">
+                <figure class="figure">
+                    <img src="./assets/imgs/friend-finder.gif" class="figure-img img-fluid rounded" alt="Friend Finder" width="350px" height ="350px">
+                    <figcaption class="figure-caption text-center font-weight-bold">Friend Finder</figcaption>
+                </figure>
+              </a>
             </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <a target="_blank" href="https://github.com/skinsler/burger">
+                <figure class="figure">
+                    <img src="./assets/imgs/burger.jpg" class="figure-img img-fluid rounded" alt="Burger" width="350px" height ="350px">
+                    <figcaption class="figure-caption text-center font-weight-bold">Burger</figcaption>
+                </figure>
+              </a>
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-            </div>
-          </div>
-        </article>
+          </article>
+    
       </div>
-    </main>
   </div>
   <!-- End of container -->
 
